// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InformationRequestRouter should return false when given a not IntentRequest 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak><p/></speak>",
    "type": "SSML",
  },
  "reprompt": Object {
    "outputSpeech": Object {
      "ssml": "<speak><p/></speak>",
      "type": "SSML",
    },
  },
  "shouldEndSession": false,
}
`;

exports[`LaunchRequestScript should return false when given a not IntentRequest 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak><p>Hello! It&apos;s a nice development. How are you?</p></speak>",
    "type": "SSML",
  },
  "reprompt": Object {
    "outputSpeech": Object {
      "ssml": "<speak><p>How are you?</p></speak>",
      "type": "SSML",
    },
  },
  "shouldEndSession": false,
}
`;
